--- a/juguemos.css
+++ b/juguemos.css
@@ -1,11 +1,14 @@
-html{
+html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body{
+body {
     background-color: #427E80;
     color: #F0F5E4;
+
 }
+
+
 
 /* nav */
 
@@ -90,8 +93,8 @@ rect#form2, polygon#cont2 {
             transform:translate(0,0);
             opacity:1;}
         }  
-
 /*fin nav*/
+/*principal*/
 
 header {
     background-image: url(./assets/imagenes/codigo.jpeg);
@@ -103,117 +106,88 @@ header {
     color: #eeee;
     align-items: center;
      
+    
 }
+
 
 h1{ 
     text-align: center;
     background-color: #2D2D2D;
+    
 
 }
 
 h2 {
-    text-align: center;
-    font-size: 40px;
-}
-
-
-
-
-/*principal*/
-
-.caja {
-    display: flex;
-    padding: 100px 20px;
-    align-items: center;
-    flex-direction: column;
-    
-}
-
-.caja_historia{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    gap: 20px;
-    padding: 80px 50px;
-
-}
-
-p {
-    color: #000;
-
-}
-
-.texto-historia {
-    width: 100%;
-
-}
-
-.caja_video {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    padding: 100px;
-    
-}
-
-.seccion_caja {
-    width: 70%;
-    background-color: #000;
-
-}
-
-.barra_video {
-    background-color: #2D2D2D;
-    padding: 5px 5px;
-    border-radius: 10px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.botones_video {
-    display: flex;
-    gap: 20px;
+   text-align: center;
+   font-size: 40px;
    
 }
 
-#pause, #play {
-    width: 100px;
-    border-radius: 10px;
-
-}
-
-
-
-.tiempo_video {
-    background-color: #F0F5E4;
-
-}
-
-
-/* Fin Principal */
-/* Pie */
-
-footer {
-    background-color: #1e1e1e;
-    color: #eeee;
-    height: 100px;
+.cuerpo {
     display: flex;
-    justify-content: space-between;
+    gap: 20px;
+    margin: 100px;
+    width: 100%;
+    justify-content: space-evenly;
+
+}
+
+.caja {
+
+    width: 350px;
+    height: 400px;
+    display: flex;
     align-items: center;
-    padding: 0px 20px;
-
-}
-
-.Pagina_pie {
-    width: 300px;
-    height: 100px;
-    display: flex;
     justify-content: space-between;
+    background-color: #F0F5E4;
+    border: 5px solid #154454;
+    flex-direction: column;
+    
+}
+
+
+
+.juego{
+    flex-direction: column;
+    align-items: center;
+    display: flex;
 
 }
 
-.programacion_historia {
+.cajasdejuego {
+    display: flex;
+    flex-direction: row;
+   
+}
+
+#caja1, #caja2, #caja3 {
+    
+    display: inline-block;
     text-align: center;
-    font-size: 15px;
+    width: 300px;
+    height: 300px;
+    background-color: #2D2D2D;
+    border:#0000;
+ 
+
+}
+
+#imagenes{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin: 40px;
+    
+}
+
+#imagen1, #imagen2, #imagen3 {
+    width: 300px;
+    height: 300px;
+}
+
+.BotonReinicio {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin: auto;
 }
